src/test/resources/plang-strict/passing/011_conditionals.plang
**#Conditionals
**Memory:a=Integer(3)
Program testing
  Változók:
    a: Egész

  ha igaz akkor
    a := 3
  ha_vége
program_vége
