src/test/resources/plang-strict/parse-error/011_condition_must_be_boolean.plang
**#Condition must be boolean
**FirstErrorLoc:7,6
Program testing
  Változók:
    a: Logikai

  ha 34 akkor
    a := igaz
  ha_vége
program_vége
